# django-jugemaj

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
docs/: conf.py  example.md  foot.md  index.md  reference.md  requirements.txt
example/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
example/migrations/: 0001_initial.py  0002_cats.py  0003_elect_a_cat.py  0004_alter_wikidatamodel_id.py  __init__.py
jugemaj/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
jugemaj/migrations/: 0001_initial.py  0002_alter_vote_choice.py  0003_alter_candidate_id_alter_election_id_and_more.py
jugemaj/templates/jugemaj/: bar.html  election_detail.html  election_list.html  vote.html
jugemaj/templatetags/: jugemaj.py
testproject/: __init__.py  settings.py  urls.py
testproject/static/css/: jugemaj.css
testproject/templates/: base.html
testproject/templates/registration/: login.html
