[tool.poetry]
name = "jugemaj"
version = "1.0.0"
description = "A Django app for the Majority Judgment voting system"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.6.1"
ndh = "^3.10.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
python-coveralls = "^2.9.3"
safety = "^1.9.0"
yapf = "^0.30.0"
mypy = "^0.770"
django-stubs = "^1.5.0"
pydocstyle = "^5.0.2"
pre-commit = "^2.4.0"
setuptools-scm = "^3.5.0"
sphinx = "^3.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
